# SimpleHuffman

./: .gitignore  Cargo.toml  README.md
src/: compress.rs  config.rs  decompress.rs  main.rs  tree.rs
